fix: post layout issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,5 @@
 ---
 title: "style"
-author: "Hammed Oyedele"
 ---
 
 @import "{{ site.theme }}";
